# refactoring-workshop-2016

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
DynamicEvents/: CMakeLists.txt  Event.hpp  EventT.hpp  IEventHandler.hpp  IPort.hpp
SnakeController/: CMakeLists.txt  SnakeController.cpp  SnakeController.hpp  SnakeDimension.hpp  SnakeIWorld.hpp  SnakeInterface.hpp  SnakePosition.hpp  SnakeSegments.cpp  SnakeSegments.hpp  SnakeTorusWorld.cpp  SnakeTorusWorld.hpp  SnakeWorld.cpp  SnakeWorld.hpp
SnakeController/Tests/: SnakeControllerConfigBuilder.hpp  SnakeControllerPauseTestSuite.cpp  SnakeControllerScoreIndTestSuite.cpp  SnakeControllerTestSuite.cpp  SnakeControllerTorusTestSuite.cpp  SnakeControllerWrongFoodLocation.cpp
SnakeController/Tests/Mocks/: EventMatchers.hpp  PortMock.hpp
cmake/modules/: CodeCoverage.cmake
